@@ -1,3 +1,7 @@
+2007-12-04  Glenn Morris  <rgm@gnu.org>
+
+	* tramp.el: Require password-cache or password.
+
 2007-11-19  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-open-connection-setup-interactive-shell): Still
